--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^17.0.1"
   },
   "scripts": {
-    "compile-css": "node-sass src/scss/styles.scss build/styles.css -w src/scss --output-style compressed",
+    "compile-css": "node-sass src/scss/styles.scss build/styles.css --output-style compressed",
+    "watch-css": "yarn compile-css -w src/scss",
+    "watch-js": "webpack -w",
     "compile": "webpack"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "babel-loader": "^8.2.1",
+    "npm-run-all": "^4.1.5",
     "typescript": "^4.1.2",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0"
