--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "watch-css": "yarn compile-css -w src/scss",
     "watch-js": "webpack -w",
     "compile-js": "webpack --mode=production",
-    "compile": "run-p compile-js compile-css"
+    "compile": "run-p compile-js compile-css",
+    "watch": "run-p watch-css watch-js"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
